--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,9 @@
 ---
 
 @import "{{ site.theme }}";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-$main-font: Georgia, Times, "Times New Roman", serif;
+$main-font:     "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
 $content-width: 800px;
 
 // Base styles
